# swpl

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql.yml
doc/: Doxyfile
src/: ConfigurationManager.hpp  Global.h  IO.hpp  debug.h  main.cpp  swpl_config.h.in
src/config/: ConfigurationFile.hpp  ConfigurationFileINI.cpp  ConfigurationFileINI.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp
src/core/: ConcurrentQueue.hpp  Configurable.hpp  DeviceIO.cpp  DeviceIO.hpp  FileIO.cpp  FileIO.hpp  IO.cpp  IO.hpp  IOconfiguration.cpp  IOconfiguration.hpp  Pipeline.cpp  Pipeline.hpp  Stage.hpp
src/io/: DeviceIO.cpp  DeviceIO.hpp  FileIO.cpp  FileIO.hpp  FileIOconfiguration.cpp  FileIOconfiguration.hpp
src/osdep/: DL.hpp
src/osdep/linux/: DL.cpp
src/osdep/windows/: DL.cpp
src/transform/: Mirror.cpp  Mirror.hpp
tests/unit/: ConcurrentQueue_tests.cpp  ConfigurationFileINI_tests.cpp  ConfigurationManager_tests.cpp  FileIO_tests.cpp  IOconfiguration_tests.cpp
